# rusty-chip8-emu

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: chip8.rs  main.rs  util.rs
