[package]
name = "rusty-chip8-emu"
version = "0.1.0"
authors = ["Matthew McDade <Matthew.McDade13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34.2", features = ["bundled"] }
rand = "0.7"
libc = "0.2"
imgui = "0.4.0"